[gd_scene format=3 uid="uid://bw7ntt2h1m6kq"]

[ext_resource type="Script" uid="uid://dju138r63v56u" path="res://scenes/screens/main_menu/main_menu_screen.gd" id="1_kj8vl"]
[ext_resource type="Texture2D" uid="uid://dot88bg7nca31" path="res://assets/art/ui/mainmenu/menu-background.png" id="1_rs0ey"]
[ext_resource type="Texture2D" uid="uid://4xdxuc0ugl25" path="res://assets/art/ui/mainmenu/title.png" id="2_dauu4"]
[ext_resource type="Texture2D" uid="uid://dwud458ytu6ua" path="res://assets/art/ui/mainmenu/menu-mask.png" id="3_d0tpg"]
[ext_resource type="Texture2D" uid="uid://cce1336vhg6vu" path="res://assets/art/ui/mainmenu/layout-p1.png" id="4_5g12y"]
[ext_resource type="Texture2D" uid="uid://bscbn4oydltd2" path="res://assets/art/ui/mainmenu/layout-p2.png" id="5_sf18h"]
[ext_resource type="Texture2D" uid="uid://cq2v5rhfkwrh2" path="res://assets/art/ui/mainmenu/1-player-selected.png" id="6_filxx"]
[ext_resource type="Texture2D" uid="uid://dhed4rmss6ekx" path="res://assets/art/ui/mainmenu/2-players.png" id="7_3g2hh"]
[ext_resource type="Texture2D" uid="uid://bqb268is4lxdk" path="res://assets/art/ui/mainmenu/ball-selection.png" id="8_cs0cy"]

[sub_resource type="ViewportTexture" id="ViewportTexture_kj8vl"]

[sub_resource type="Animation" id="Animation_g0m07"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TitleTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SinglePlayerTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayerTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(155, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Background/SelectionIcon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nq4xm"]
resource_name = "start"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TitleTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, -70), Vector2(25, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SinglePlayerTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, 100), Vector2(35, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayerTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, 125), Vector2(35, 125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(155, 180), Vector2(155, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Background/SelectionIcon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_set_active"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0m07"]
_data = {
&"RESET": SubResource("Animation_g0m07"),
&"start": SubResource("Animation_nq4xm")
}

[sub_resource type="Animation" id="Animation_kj8vl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cs0cy"]
resource_name = "rotate"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5707964, 3.1415927, 4.712389, 6.2831855]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kj8vl"]
_data = {
&"RESET": SubResource("Animation_kj8vl"),
&"rotate": SubResource("Animation_cs0cy")
}

[node name="MainMenuScreen" type="Node" unique_id=1225610826]
script = ExtResource("1_kj8vl")

[node name="Background" type="TextureRect" parent="." unique_id=680499268]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_rs0ey")

[node name="TitleTexture" type="TextureRect" parent="Background" unique_id=252358445]
layout_mode = 1
offset_left = 25.0
offset_top = 20.0
offset_right = 164.0
offset_bottom = 85.0
texture = ExtResource("2_dauu4")

[node name="Mask" type="TextureRect" parent="Background" unique_id=408785861]
modulate = Color(0, 0, 0, 0.7490196)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_bottom = 180.0
grow_horizontal = 0
texture = ExtResource("3_d0tpg")

[node name="PlayerOneControls" type="TextureRect" parent="Background" unique_id=629456451]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -100.0
offset_right = -8.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_5g12y")

[node name="PlayerTwoControls" type="TextureRect" parent="Background" unique_id=314720395]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -50.0
offset_right = -8.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_sf18h")

[node name="SinglePlayerTexture" type="TextureRect" parent="Background" unique_id=1402355180]
unique_name_in_owner = true
layout_mode = 1
offset_left = 35.0
offset_top = 100.0
offset_right = 177.0
offset_bottom = 121.0
texture = ExtResource("6_filxx")
stretch_mode = 2

[node name="TwoPlayerTexture" type="TextureRect" parent="Background" unique_id=1398192705]
unique_name_in_owner = true
layout_mode = 0
offset_left = 35.0
offset_top = 125.0
offset_right = 177.0
offset_bottom = 146.0
texture = ExtResource("7_3g2hh")
stretch_mode = 2

[node name="OnlineGame" type="TextureRect" parent="Background" unique_id=1130571997]
unique_name_in_owner = true
layout_mode = 0
offset_left = 35.0
offset_top = 150.0
offset_right = 177.0
offset_bottom = 171.0
texture = SubResource("ViewportTexture_kj8vl")
stretch_mode = 2

[node name="Label" type="Label" parent="Background/OnlineGame" unique_id=1751692886]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -9.0
offset_right = 60.0
offset_bottom = 9.0
grow_vertical = 2
text = "OnLine Game （TODO..）"

[node name="SelectionIcon" type="TextureRect" parent="Background" unique_id=1545552825]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 100.0
offset_right = 30.0
offset_bottom = 120.0
pivot_offset = Vector2(10, 10)
texture = ExtResource("8_cs0cy")
stretch_mode = 2

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="." unique_id=2097079670]
libraries/ = SubResource("AnimationLibrary_g0m07")
autoplay = &"start"

[node name="BallAnimationPlayer" type="AnimationPlayer" parent="." unique_id=1012165871]
libraries/ = SubResource("AnimationLibrary_kj8vl")
autoplay = &"rotate"
